adding new jwt authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=weblog
+weblog.app.jwtCookieName=weblog
+weblog.app.jwtSecret=WeblogSecretKey
+weblog.app.jwtExpirationMs=86400000
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
